Fix banner on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -448,6 +448,7 @@ a.download-button:visited {
 
     .banner h1 {
         font-size: 32px;
+        margin-top: 10vh;
     }
 
     .banner p {
